@@ -7,9 +7,9 @@ class ChannelDialog < OSX::NSObject
   include OSX
   include DialogHelper
   
-  attr_accessor :window
-  attr_accessor :delegate, :prefix
+  attr_accessor :delegate, :prefix, :parent
   attr_reader :uid, :cid, :modal
+  ib_outlet :window
   ib_mapped_outlet :nameText, :passwordText, :modeText, :topicText, :auto_joinCheck, :keywordCheck, :unreadCheck, :consoleCheck
   ib_outlet :okButton
   
@@ -74,6 +74,7 @@ class ChannelDialog < OSX::NSObject
   end
   
   def show
+    @window.moveToCenterOf(@parent) unless @window.isVisible
     @window.makeKeyAndOrderFront(self)
   end
   
